# Furrballs

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Doxyfile  Furballs.sln  LICENSE  README.md  policy-bench.csv  vcpkg-configuration.json  vcpkg.json  vps-ycsb-post-fix.json
Benchmark/: BaselineBenchmark.cpp  BaselineCache.h  Benchmark.cpp  CMakeCache.txt  CMakeLists.txt  EvictBench.cpp  FurrBench.cpp  IsolatedBench.cpp  Makefile  MultiNodeBench.cpp  NUMAAllocCache.h  NUMABench.cpp  PolicyBench.cpp  RemarcBench.cpp  YCSBBench.cpp  cmake_install.cmake  coherence_test.cpp
Benchmark/Benchmark/: Makefile  cmake_install.cmake
Benchmark/Furrballs/: Makefile  cmake_install.cmake
Benchmark/FurrballsSM/: Makefile  cmake_install.cmake
Benchmark/Sandbox/: Makefile  cmake_install.cmake
Benchmark/_bn_arc_4pg/: 000012.sst  000017.sst  IDENTITY  LOG  LOG.old.1777586660508879  LOG.old.1777587524141999  LOG.old.1777587631923301  MANIFEST-000019
Benchmark/_bn_arc_8pg/: 000012.sst  000017.sst  IDENTITY  LOG  LOG.old.1777586656291607  LOG.old.1777587519940156  LOG.old.1777587627644573  MANIFEST-000019
Benchmark/_bn_arc_8pg_1600/: 000012.sst  000017.sst  IDENTITY  LOG  LOG.old.1777586664884043  LOG.old.1777587528215062  LOG.old.1777587636170864  MANIFEST-000019
Benchmark/_bn_rm_4pg/: 000008.sst  000013.sst  000018.sst  IDENTITY  LOG  LOG.old.1777586662737652  LOG.old.1777587526189358  LOG.old.1777587634018624  MANIFEST-000020
Benchmark/_bn_rm_8pg/: 000008.sst  000013.sst  000018.sst  IDENTITY  LOG  LOG.old.1777586658386950  LOG.old.1777587522053363  LOG.old.1777587629786960  MANIFEST-000020  OPTIONS-000017
Benchmark/_bn_rm_8pg_1600/: 000008.sst  000013.sst  000018.sst  IDENTITY  LOG  LOG.old.1777586668833705  LOG.old.1777587532048956  LOG.old.1777587640089311  MANIFEST-000020
Benchmark/numatic/: Makefile  cmake_install.cmake
Furballs/: Furballs.vcxproj
Furrballs/: CMakeLists.txt  CppProperties.json
Furrballs/include/: Barrier.h  Burst.h  CMap.h  Concept.h  Error.h  Furrballs.h  IFactory.h  Latch.h  Logger.h  MemoryManager.h  NativeStore.h  NodeJob.h  Page.h  Policy.h  Remarc.h  SeqLock.h  WaitGroup.h
Furrballs/src/: Burst.cpp  Furrballs.cpp  Logger.cpp  NodeJob.cpp  Page.cpp
FurrballsSM/: CMakeLists.txt
FurrballsSM/include/: SharedNothingCache.h
FurrballsSM/src/: SharedNothingCache.cpp
Sandbox/: CMakeLists.txt  Sandbox.cpp  Sandbox.h
_bn_arc_4pg/: IDENTITY  LOG  LOG.old.1777542449386333  LOG.old.1777542568415172  LOG.old.1777542916664080  LOG.old.1777543463938316  LOG.old.1777553939585710  MANIFEST-000025
_bn_arc_8pg/: IDENTITY  LOG  LOG.old.1777542443210351  LOG.old.1777542563947941  LOG.old.1777542912199930  LOG.old.1777543459341609  LOG.old.1777553935143275
_bn_arc_8pg_1600/: IDENTITY  LOG  LOG.old.1777542455516831  LOG.old.1777542572903589  LOG.old.1777542921110034  LOG.old.1777543468539348  LOG.old.1777553944043499
_bn_rm_4pg/: IDENTITY  LOG  LOG.old.1777542452357705  LOG.old.1777542570607379  LOG.old.1777542918834798  LOG.old.1777543466189349  LOG.old.1777553941768276
_bn_rm_8pg/: IDENTITY  LOG  LOG.old.1777542446275214  LOG.old.1777542566115944  LOG.old.1777542914397812  LOG.old.1777543461669325  LOG.old.1777553937334259
_bn_rm_8pg_1600/: IDENTITY  LOG  LOG.old.1777542461152287  LOG.old.1777542576824308  LOG.old.1777542925024954  LOG.old.1777543472683124  LOG.old.1777553948132392
buildcheck/: CMakeCache.txt
buildrel_test/: CMakeCache.txt
data/: deduped-benchmark-data.csv  full-benchmark-data.csv  full-benchmark-tables.txt  ycsb-vps-sanity.json
data/ec2-c6a/: numabench-full-cachelib-v2.json  numabench-full-v2.json  numabench-full-v3-fix.json  numabench-full-v4-stats.json  ycsb-c6a-capacity-sweep.json  ycsb-c6a-coherent-4t-64mb.json  ycsb-c6a-fix.json  ycsb-c6a-v2.json  ycsb-c6a-v3.json  ycsb-c6a.json
data/ec2-results3/: numabench-cl-20260516-232518.json
data/ec2-results4/: arc-frozenfix-20260517.json  arc-promotebuf-20260517.json  arceq-arc-20260517.json  arceq-tbb-20260517.json  cachelib-1024b-20260518.json  cachelib-1024b-v2-20260518.json  cl-ro-uniform-1024b-20260518.json  cl-sweep-uniform-1024b-20260518.json  cl-sweep-uniform-1024b-v2026-20260518.json  equalcap-20260517.json  equalcap-cachelib-20260517.json  lru-20260517.json  lru-equalcap-20260517.json  lru-frozenfix-20260517.json  lru-promotebuf-20260517.json  numa-1024b-20260517.json  numa-1024b-v2-20260518.json  numabench-7sys-20260517-113027.json  (+5 more)
docs/: .gitignore  QUARTO_SETUP.md  WHITEPAPER_DRAFT.md  _furrballs_8cpp_source.html  _furrballs_8h_source.html  _i_factory_8h_source.html  _logger_8h_source.html  _quarto.yml  anchored-summary.md  annotated.html  annotated_dup.js  benchmark-phase2b-c6i-metal.txt  class_furrball_1_1_a_r_c_policy-members.html  class_furrball_1_1_a_r_c_policy.html  class_furrball_1_1_a_r_c_policy.js  class_furrball_1_1_cache-members.html  class_furrball_1_1_cache.html  class_furrball_1_1_cache.js  class_furrball_1_1_cache_view.html  class_furrball_1_1_factory-members.html  class_furrball_1_1_factory.html  class_furrball_1_1_factory.js  class_furrball_1_1_furr_ball-members.html  class_furrball_1_1_furr_ball.html  class_furrball_1_1_furr_ball.js  class_furrball_1_1_i_factory-members.html  class_furrball_1_1_i_factory.html  class_furrball_1_1_i_factory.js  class_furrball_1_1_l_f_u_policy.html  class_furrball_1_1_l_r_u_policy.html  class_furrball_1_1_logger-members.html  class_furrball_1_1_logger.html  class_furrball_1_1_logger.js  class_furrball_1_1_memory_manager-members.html  class_furrball_1_1_memory_manager.html  class_furrball_1_1_memory_manager.js  class_furrball_1_1_s3_f_i_f_o_policy-members.html  class_furrball_1_1_s3_f_i_f_o_policy.html  class_furrball_1_1_s3_f_i_f_o_policy.js  class_furrball_1_1_static_factory_wrapper-members.html  (+38 more)
io_arc/: IDENTITY  LOG
io_remarc_nopref/: IDENTITY  LOG
io_remarc_prefetch/: IDENTITY  LOG
numatic/: CMakeLists.txt
numatic/include/: Numatic.h
numatic/src/: NumaticUnix.cpp  NumaticWin.cpp
scripts/: ec2-init.sh  ec2-run.sh  gcp-setup.sh
(+204 files in other folders)
