find_package(benchmark CONFIG REQUIRED)
find_package(RocksDB CONFIG REQUIRED)
find_package(TBB CONFIG REQUIRED)
find_package(Threads REQUIRED)

add_executable(YCSBBench "YCSBBench.cpp")
target_include_directories(YCSBBench PRIVATE "${CMAKE_SOURCE_DIR}/Furrballs/include" "${CMAKE_SOURCE_DIR}/numatic/include")
target_link_libraries(YCSBBench PRIVATE Furrballs Numatic Threads::Threads benchmark::benchmark)
target_link_libraries(YCSBBench PRIVATE RocksDB::rocksdb)
target_link_libraries(YCSBBench PRIVATE TBB::tbb)
option(USE_CACHELIB "Build YCSBBench with CacheLib adapter" OFF)
if(USE_CACHELIB)
    find_package(magic_enum QUIET)
    if(NOT magic_enum_FOUND)
        find_library(MAGIC_ENUM_LIBRARIES NAMES magic_enum)
        if(MAGIC_ENUM_LIBRARIES)
            add_library(magic_enum::magic_enum UNKNOWN IMPORTED)
            set_target_properties(magic_enum::magic_enum PROPERTIES IMPORTED_LOCATION ${MAGIC_ENUM_LIBRARIES})
        endif()
    endif()
    if(NOT TARGET NUMA::NUMA)
        find_package(NUMA QUIET)
        if(NOT NUMA_FOUND)
            find_library(NUMA_LIBRARIES NAMES numa)
            if(NUMA_LIBRARIES)
                add_library(NUMA::NUMA UNKNOWN IMPORTED)
                set_target_properties(NUMA::NUMA PROPERTIES IMPORTED_LOCATION ${NUMA_LIBRARIES})
            endif()
        endif()
    endif()
    find_package(cachelib CONFIG REQUIRED)
    target_compile_definitions(YCSBBench PRIVATE USE_CACHELIB)
    target_link_libraries(YCSBBench PRIVATE cachelib)
endif()
