find_package(benchmark CONFIG QUIET)
if(NOT benchmark_FOUND)
    find_library(BENCHMARK_LIBRARY NAMES benchmark)
    find_path(BENCHMARK_INCLUDE_DIR NAMES benchmark/benchmark.h)
    add_library(benchmark::benchmark STATIC IMPORTED)
    set_target_properties(benchmark::benchmark PROPERTIES
        IMPORTED_LOCATION "${BENCHMARK_LIBRARY}"
        INTERFACE_INCLUDE_DIRECTORIES "${BENCHMARK_INCLUDE_DIR}")
endif()

find_package(RocksDB CONFIG QUIET)
if(NOT RocksDB_FOUND)
    find_library(ROCKSDB_LIBRARY NAMES rocksdb)
    find_path(ROCKSDB_INCLUDE_DIR NAMES rocksdb/db.h)
    add_library(RocksDB::rocksdb STATIC IMPORTED)
    set_target_properties(RocksDB::rocksdb PROPERTIES
        IMPORTED_LOCATION "${ROCKSDB_LIBRARY}"
        INTERFACE_INCLUDE_DIRECTORIES "${ROCKSDB_INCLUDE_DIR}")
endif()

find_package(TBB CONFIG QUIET)
if(NOT TBB_FOUND)
    find_library(TBB_LIBRARY NAMES tbb)
    find_path(TBB_INCLUDE_DIR NAMES tbb/tbb.h)
    add_library(TBB::tbb STATIC IMPORTED)
    set_target_properties(TBB::tbb PROPERTIES
        IMPORTED_LOCATION "${TBB_LIBRARY}"
        INTERFACE_INCLUDE_DIRECTORIES "${TBB_INCLUDE_DIR}")
endif()

find_package(Threads REQUIRED)

add_executable(YCSBBench "YCSBBench.cpp")
target_include_directories(YCSBBench PRIVATE "${CMAKE_SOURCE_DIR}/Furrballs/include" "${CMAKE_SOURCE_DIR}/numatic/include")
target_link_libraries(YCSBBench PRIVATE Furrballs Numatic Threads::Threads benchmark::benchmark)
target_link_libraries(YCSBBench PRIVATE RocksDB::rocksdb)
target_link_libraries(YCSBBench PRIVATE TBB::tbb)

add_executable(NUMABench "NUMABench.cpp")
target_include_directories(NUMABench PRIVATE "${CMAKE_SOURCE_DIR}/Furrballs/include" "${CMAKE_SOURCE_DIR}/numatic/include")
target_link_libraries(NUMABench PRIVATE Furrballs Numatic Threads::Threads benchmark::benchmark)
target_link_libraries(NUMABench PRIVATE TBB::tbb)

option(USE_CACHELIB "Build YCSBBench with CacheLib adapter" OFF)
if(USE_CACHELIB)
    find_package(magic_enum QUIET)
    if(NOT magic_enum_FOUND)
        find_library(MAGIC_ENUM_LIBRARIES NAMES magic_enum)
        if(MAGIC_ENUM_LIBRARIES)
            add_library(magic_enum::magic_enum UNKNOWN IMPORTED)
            set_target_properties(magic_enum::magic_enum PROPERTIES IMPORTED_LOCATION ${MAGIC_ENUM_LIBRARIES})
        endif()
    endif()
    if(NOT TARGET NUMA::NUMA)
        find_package(NUMA QUIET)
        if(NOT NUMA_FOUND)
            find_library(NUMA_LIBRARIES NAMES numa)
            if(NUMA_LIBRARIES)
                add_library(NUMA::NUMA UNKNOWN IMPORTED)
                set_target_properties(NUMA::NUMA PROPERTIES IMPORTED_LOCATION ${NUMA_LIBRARIES})
            endif()
        endif()
    endif()
    find_package(cachelib CONFIG REQUIRED)
    target_compile_definitions(YCSBBench PRIVATE USE_CACHELIB)
    target_compile_definitions(NUMABench PRIVATE USE_CACHELIB)
    target_link_libraries(YCSBBench PRIVATE cachelib)
    target_link_libraries(NUMABench PRIVATE cachelib)
endif()

option(USE_CUCKOO "Build YCSBBench with libcuckoo adapter" OFF)
if(USE_CUCKOO)
    find_package(libcuckoo CONFIG QUIET)
    if(libcuckoo_FOUND)
        target_compile_definitions(YCSBBench PRIVATE USE_CUCKOO)
        target_link_libraries(YCSBBench PRIVATE libcuckoo::libcuckoo)
    else()
        find_path(CUCKOO_INCLUDE_DIR NAMES libcuckoo/cuckoohash_map.hh)
        if(CUCKOO_INCLUDE_DIR)
            target_compile_definitions(YCSBBench PRIVATE USE_CUCKOO)
            target_include_directories(YCSBBench PRIVATE "${CUCKOO_INCLUDE_DIR}")
        else()
            message(WARNING "libcuckoo not found, skipping cuckoo adapter")
        endif()
    endif()
endif()

option(USE_ABSEIL "Build YCSBBench with abseil adapter" OFF)
if(USE_ABSEIL)
    find_package(absl CONFIG QUIET)
    if(absl_FOUND)
        target_compile_definitions(YCSBBench PRIVATE USE_ABSEIL)
        target_link_libraries(YCSBBench PRIVATE absl::flat_hash_map absl::synchronization)
    else()
        message(WARNING "abseil not found, skipping abseil adapter")
    endif()
endif()
